# working_hub

./: .env.example  .gitignore  docker-compose.yml  neurion-proposal.md  시작작업.txt
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 16ad20af70f6_add_plan_start_year_to_desired_plans.py  382438d6a70e_initial_schema.py  651d08548ceb_expand_wrap_accounts_add_product_select_.py  6f86cc96bd7e_add_quantity_purchase_price_current_.py  8af06683492d_add_interim_evaluations_to_investment_.py  9da2688a7673_add_total_deposit_withdrawal_to_holdings.py  a9fe37064980_add_foreign_deposit_amount_total_assets_.py  b1c2d3e4f5a6_add_client_portfolio_v2.py  c2d3e4f5a6b7_add_product_master.py  d4e5f6a7b8c9_add_client_portal_tables.py  da46db5e3cf1_add_user_api_keys.py  e1f2a3b4c5d6_add_recommended_portfolio_items.py  f2a3b4c5d6e7_add_client_unique_code_ssn.py  g3h4i5j6k7l8_add_market_analysis_cache.py  h4i5j6k7l8m9_add_sms_templates.py  i5j6k7l8m9n0_add_message_logs.py  j6k7l8m9n0o1_add_field_options_representative.py  k7l8m9n0o1p2_add_product_name_changes.py  l8m9n0o1p2q3_add_user_phone_suggestion_created_by.py  m9n0o1p2q3r4_add_suggestion_manager_note.py  n0o1p2q3r4s5_add_customer_retirement_profiles.py  o1p2q3r4s5t6_add_wrap_accounts.py  p2q3r4s5t6u7_add_desired_plans.py  p2q3r4s5t6u7_add_retirement_plans.py  (+5 more)
backend/app/: main.py
backend/tests/: test_db_connection.py  test_desired_plans.py  test_interactive_calc.py  test_investment_records.py  test_pension_plans.py  test_retirement_profiles.py  test_retirement_simulation.py
(+289 files in other folders)
